2016-03-26 将日志改为html格式，方便查看结果（项目大部分功能已完成，需要处理一部分编码问题及特殊情况下的using namespace问题，进度99%）
-- 目前进度：
1. 代码已经过初步整理，并已加上注释，输出结果采用html方式记录

-- 待处理事项：
1. 解决遗漏using namespace的问题
2. 针对模板作更细致处理
4. 编写说明文档
5. 如果有空闲，在CentOs下编译本工具

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,63 @@
 set(LLVM_LINK_COMPONENTS support)
 
-add_clang_executable(loop-convert
-  LoopConvert.cpp
+add_clang_executable(cxxclean
+	cxx_clean.cpp
+	parsing_cpp.cpp	
+	project.cpp
+	project_history.cpp
+	test.cpp
+	tool.cpp
+	vs_project.cpp
 )
-target_link_libraries(loop-convert
-  clangTooling
-  clangBasic
-  clangASTMatchers
+
+target_link_libraries(cxxclean
+	clangTooling
+	clangBasic
+	clangASTMatchers
+	clangTooling.lib
+	clangBasic.lib
+	clangASTMatchers.lib
+	clangFrontend.lib
+	clangDriver.lib
+	clangParse.lib
+	clangSerialization.lib
+	clangSema.lib
+	clangEdit.lib
+	clangAnalysis.lib
+	clangToolingCore.lib
+	clangAST.lib
+	clangRewrite.lib
+	clangLex.lib
+	LLVMOption.lib
+	LLVMMCParser.lib
+	LLVMBitReader.lib
+	LLVMSupport.lib
+	LLVMCore.lib
+	LLVMMC.lib
+	LLVMAnalysis.lib
+	LLVMCodeGen.lib
+	LLVMipo.lib
+	LLVMInstCombine.lib
+	LLVMInstrumentation.lib
+	LLVMObjCARCOpts.lib
+	LLVMScalarOpts.lib
+	LLVMTransformUtils.lib
+	LLVMVectorize.lib
+	LLVMAsmPrinter.lib
+	LLVMSelectionDAG.lib
+	LLVMX86Utils.lib
+	LLVMMCDisassembler.lib
+	LLVMTarget.lib
+	LLVMBitWriter.lib
+	LLVMIRReader.lib
+	LLVMAsmParser.lib
+	LLVMLinker.lib
+	LLVMProfileData.lib
+	LLVMObject.lib
+	LLVMX86CodeGen.lib
+	LLVMX86AsmPrinter.lib
+	LLVMX86AsmParser.lib
+	LLVMX86Desc.lib
+	LLVMX86Info.lib
+	LLVMX86Disassembler.lib
 )
