--- a/hello/hello.vcxproj
+++ b/hello/hello.vcxproj
@@ -91,9 +91,10 @@
     <ClInclude Include="i_deeply_include.h" />
     <ClInclude Include="j.h" />
     <ClInclude Include="j_enumeration.h" />
-    <ClInclude Include="nil1.h" />
-    <ClInclude Include="nil2.h" />
-    <ClInclude Include="stdafx.h" />
+    <ClInclude Include="k.h" />
+    <ClInclude Include="k_namespace.h" />
+    <ClInclude Include="nil.h" />
+    <ClInclude Include="test.h" />
     <ClInclude Include="type.h" />
   </ItemGroup>
   <ItemGroup>
