--- a/hello/hello.vcxproj.filters
+++ b/hello/hello.vcxproj.filters
@@ -1,8 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClInclude Include="nil1.h" />
-    <ClInclude Include="nil2.h" />
     <ClInclude Include="a.h" />
     <ClInclude Include="a_func.h" />
     <ClInclude Include="b.h" />
@@ -13,7 +11,6 @@
     <ClInclude Include="e_typedef.h" />
     <ClInclude Include="e.h" />
     <ClInclude Include="type.h" />
-    <ClInclude Include="stdafx.h" />
     <ClInclude Include="f_forwarddecl.h" />
     <ClInclude Include="g_default_arg.h" />
     <ClInclude Include="g.h" />
@@ -30,6 +27,10 @@
     <ClInclude Include="f_2.h" />
     <ClInclude Include="f_3.h" />
     <ClInclude Include="f_4.h" />
+    <ClInclude Include="k_namespace.h" />
+    <ClInclude Include="k.h" />
+    <ClInclude Include="test.h" />
+    <ClInclude Include="nil.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="hello.cpp" />
