2016-08-22 新增：允许覆盖只读的c++文件

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,12 +2,12 @@ set(LLVM_LINK_COMPONENTS support)
 
 add_clang_executable(cxxclean
 	cxx_clean.cpp
-	parsing_cpp.cpp	
+	parser.cpp	
 	project.cpp
-	project_history.cpp
+	history.cpp
 	test.cpp
 	tool.cpp
-	vs_project.cpp
+	vs.cpp
 	html_log.cpp
 	main.cpp
 )
