feat(更新clang版本):调通编译

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,12 +1,12 @@
-set( LLVM_LINK_COMPONENTS
-  ${LLVM_TARGETS_TO_BUILD}
+set(LLVM_LINK_COMPONENTS
+  Core
   Option
   Support
 )
 
-add_clang_executable(cxxclean
+add_clang_tool(cxxclean
 	cxx_clean.cpp
-	parser.cpp	
+	parser.cpp
 	project.cpp
 	history.cpp
 	tool.cpp
@@ -15,15 +15,23 @@ add_clang_executable(cxxclean
 	main.cpp
 )
 
-include_directories(
-	${CLANG_SOURCE_DIR}
-)
-
-target_link_libraries(cxxclean
+set(CXXCLEAN_DEPS_LIB_DEPS
   clangAST
   clangBasic
   clangDriver
   clangFrontend
   clangRewriteFrontend
   clangTooling
-)
+  clangCodeGen
+  clangFrontendTool
+  clangLex
+  clangParse
+  clangSerialization
+  clangTooling
+  clangDependencyScanning
+  )
+
+clang_target_link_libraries(cxxclean
+  PRIVATE
+  ${CXXCLEAN_DEPS_LIB_DEPS}
+  )
